Fixed spacing between drop down arrow and text content

--- a/webpagedesign/src/components/MetricCheckBox/MetricCheckBox.css
+++ b/webpagedesign/src/components/MetricCheckBox/MetricCheckBox.css
@@ -5,7 +5,9 @@
 }
 .Label__Dropdown-item__Spacing {
   padding: 0.7rem;
+  display: flex;
   justify-content: space-between;
+  flex-grow: 1;
 }
 
 .Checkbox__Style {
